# rstcloth

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  examples.py  makefile  mkver.conf  pyproject.toml  requirements-dev.txt  rstcloth_builder.py  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  update-pull-request.yml  update_pr.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  license.rst  quick_start.rst  rstcloth.rst  version_history.rst
rstcloth/: __init__.py  cloth.py  rstcloth.py  rstcloth_builder.py  table.py  utils.py
test/: test_rstcloth.py  test_table.py
tests/: base.py  test_rstcloth.py  test_table.py  test_utils.py
