[tool.poetry]
name = "rstcloth"
version = "0.3.2"
description = "A simple Python API for generating RestructuredText."
authors = ["Tom Clark"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
repository = "https://github.com/thclark/rstcloth"
keywords = ["sphinx", "rst", "restructuredtext", "documentation", "rest", "docutils"]
packages = [{ include = "rstcloth" },]


[tool.poetry.dependencies]
python = ">=3.7,<3.11"
sphinx = ">=2,<5"
Pygments = "^2.12.0"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
coverage = "^6.2"
pre-commit = "^2.17.0"
pytest-sugar = "^0.9.4"
pytest = "^6.2.5"
# tox = "^3.24.5"
# tox-gh-actions = "^2.9.1"
# tox-poetry = "^0.4.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-tabs = "^3.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
