[metadata]
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[flake8]
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build

[isort]
default_section = THIRDPARTY
known_first_party = rstcloth,app,settings,test
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# These are necessary for `isort` to create import statements that are
# compatible with `black`. Changing these will break our auto-formatting.
# See <https://black.readthedocs.io/en/stable/the_black_code_style.html>.
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
